--- a/templates/player_form.html
+++ b/templates/player_form.html
@@ -2,7 +2,7 @@
 {% block head %}
   {{ super() }}
   <link rel="stylesheet" href="{{ url_for('static', filename='print.css') }}?v=20260131">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.js"></script>
+  <script src="https://unpkg.com/socket.io@4.7.2/client-dist/socket.io.js"></script>
 {% endblock %}
 {% block content %}
 <h1 class="mb-4">{{ title }}</h1>
