--- a/templates/kiosk.html
+++ b/templates/kiosk.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block head %}
   {{ super() }}
-  <script src="https://unpkg.com/socket.io@4.7.2/client-dist/socket.io.js"></script>
+  <script src="/static/js/socket.io.js"></script>
 {% endblock %}
 {% block content %}
 <div class="container-fluid">
