--- a/templates/admin_settings.html
+++ b/templates/admin_settings.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block head %}
   {{ super() }}
-  <script src="/static/js/socket.io.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
 {% endblock %}
 {% block content %}
 <div class="container mt-4">
@@ -71,9 +71,20 @@
 
     if (readCardBtn && cardIdInput) {
       // Card reader functionality via SocketIO
+      console.log('Connecting to SocketIO...');
       const socket = io();
+      console.log('Socket created:', socket);
+
+      socket.on('connect', function() {
+        console.log('SocketIO connected');
+      });
+
+      socket.on('disconnect', function() {
+        console.log('SocketIO disconnected');
+      });
 
       socket.on('card_scan', function(data) {
+        console.log('Received card_scan:', data);
         cardIdInput.value = data.card_id;
         readCardBtn.textContent = '{{ _("Read Card") }}';
         readCardBtn.disabled = false;
