--- a/templates/admin_settings.html
+++ b/templates/admin_settings.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block head %}
   {{ super() }}
-  <script src="/socket.io/socket.io.js"></script>
+  <script src="/static/js/socket.io.js"></script>
 {% endblock %}
 {% block content %}
 <div class="container mt-4">
