--- a/templates/admin_settings.html
+++ b/templates/admin_settings.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% block head %}
   {{ super() }}
+  <script>console.log('Before socket.io script');</script>
   <script src="/static/js/socket.io.js"></script>
+  <script>console.log('After socket.io script, typeof io:', typeof io);</script>
 {% endblock %}
 {% block content %}
 <div class="container mt-4">
