--- a/templates/admin_settings.html
+++ b/templates/admin_settings.html
@@ -2,7 +2,7 @@
 {% block head %}
   {{ super() }}
   <script>console.log('Before socket.io script');</script>
-  <script src="/static/js/socket.io.js"></script>
+  <script src="/static/js/socket.io.js?v=1"></script>
   <script>console.log('After socket.io script, typeof io:', typeof io);</script>
 {% endblock %}
 {% block content %}
