changed card reader logic

--- a/templates/admin_settings.html
+++ b/templates/admin_settings.html
@@ -1,10 +1,6 @@
 {% extends "base.html" %}
 {% block head %}
   {{ super() }}
-  <!-- Debug version 3 -->
-  <script>console.log('Before socket.io script');</script>
-  <script src="/static/js/socket.io.js?v=3"></script>
-  <script>console.log('After socket.io script, typeof io:', typeof io);</script>
 {% endblock %}
 {% block content %}
 <div class="container mt-4">
@@ -73,25 +69,21 @@
     const cardIdInput = document.getElementById('admin_card_id_input');
 
     if (readCardBtn && cardIdInput) {
-      // Card reader functionality via SocketIO
-      console.log('Connecting to SocketIO...');
-      const socket = io();
-      console.log('Socket created:', socket);
-
-      socket.on('connect', function() {
-        console.log('SocketIO connected');
-      });
-
-      socket.on('disconnect', function() {
-        console.log('SocketIO disconnected');
-      });
-
-      socket.on('card_scan', function(data) {
-        console.log('Received card_scan:', data);
-        cardIdInput.value = data.card_id;
-        readCardBtn.textContent = '{{ _("Read Card") }}';
-        readCardBtn.disabled = false;
-      });
+      // Card reader functionality via polling
+      console.log('Starting card polling...');
+      const pollInterval = setInterval(function() {
+        fetch('/card_status')
+          .then(response => response.json())
+          .then(data => {
+            if (data.card_id) {
+              console.log('Received card_id:', data.card_id);
+              cardIdInput.value = data.card_id;
+              readCardBtn.textContent = '{{ _("Read Card") }}';
+              readCardBtn.disabled = false;
+            }
+          })
+          .catch(error => console.error('Polling error:', error));
+      }, 500);  // Poll every 500ms
 
       readCardBtn.addEventListener('click', function() {
         cardIdInput.focus();
