--- a/templates/player_form.html
+++ b/templates/player_form.html
@@ -2,7 +2,6 @@
 {% block head %}
   {{ super() }}
   <link rel="stylesheet" href="{{ url_for('static', filename='print.css') }}?v=20260131">
-  <script src="/static/js/socket.io.js"></script>
 {% endblock %}
 {% block content %}
 <h1 class="mb-4">{{ title }}</h1>
@@ -326,14 +325,19 @@
     const cardIdInput = document.getElementById('card_id_input');
 
     if (readCardBtn && cardIdInput) {
-      // Card reader functionality via SocketIO
-      const socket = io();
-
-      socket.on('card_scan', function(data) {
-        cardIdInput.value = data.card_id;
-        readCardBtn.textContent = '{{ _("Read Card") }}';
-        readCardBtn.disabled = false;
-      });
+      // Card reader functionality via polling
+      const pollInterval = setInterval(function() {
+        fetch('/card_status')
+          .then(response => response.json())
+          .then(data => {
+            if (data.card_id) {
+              cardIdInput.value = data.card_id;
+              readCardBtn.textContent = '{{ _("Read Card") }}';
+              readCardBtn.disabled = false;
+            }
+          })
+          .catch(error => console.error('Polling error:', error));
+      }, 500);  // Poll every 500ms
 
       readCardBtn.addEventListener('click', function() {
         cardIdInput.focus();
